# prime-pcp

./: .gitignore  analysis.ipynb  model_hypotheses.xlsx  pc_analysis.py  plasmasheet_temp.ipynb  pyproject.toml  regrecal.ipynb  requirements.txt  shocks.ipynb  shocks.txt  superdarn.ipynb
data/: storm-starts.txt
