[tool.poetry]
name = "prime-pcp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prime_pcp"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
tables = "^3.9.2"
mshpy = "^0.0.31"
sympy = "^1.12"
scipy = "^1.12.0"
astropy = "^6.0.0"
cdasws = "^1.7.43"
cdflib = "^1.2.3"
xarray = "^2024.1.1"
pydarnio = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
